# pipeworks-policy-workbench

./: .example.env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml
config/: mirror_map.yaml
deploy/etc/pipeworks/policy-workbench/: policy-workbench.env.example
deploy/nginx/: policies.pipeworks.luminal.local
deploy/systemd/: pipeworks-policy-workbench.service
docs/: OPERATOR_GUIDE_API_ONLY.md  SYNC_CONTRACT_V1.md
docs/source/: conf.py  deploy.md  index.md  overview.md  policy_types.md  runtime_modes.md
docs/source/api/: cli.rst  index.md  policy_authoring.rst  runtime_mode.rst  web_app.rst
src/policy_workbench/: __init__.py  cli.py  env_loader.py  extractors.py  mirror_map.py  models.py  mud_api_client.py  mud_api_runtime.py  pathing.py  policy_authoring.py  runtime_mode.py  server.py  sync_apply.py  sync_models.py  sync_planner.py  tree_model.py  validators.py  web_app.py  web_diagnostics_services.py  web_local_policy_metadata.py  web_models.py  web_policy_proxy_services.py  web_runtime_services.py  web_services.py  web_source_services.py
src/policy_workbench/commands/: __init__.py  doctor.py  sync.py  validate.py
src/policy_workbench/static/: pipe-works-base.css  workbench.css  workbench.js
src/policy_workbench/static/workbench/: app.js  boot.js  constants.js  dom.js  editor_actions.js  hash.js  inventory.js  runtime.js  runtime_session.js  state.js  sync_compare.js  sync_plan.js  tabs.js  tree.js  validation.js
src/policy_workbench/static/workbench/inventory/: activation_actions.js  activation_scope.js  activation_table.js  activation_view.js  context.js  policy_filters.js  policy_inventory.js  policy_object.js  policy_selector.js  unauthorized_state.js  world_scope.js
src/policy_workbench/templates/: index.html
tests/: conftest.py
tests/unit/: test_cli.py  test_commands.py  test_env_loader.py  test_extractors.py  test_frontend_contract.py  test_mirror_map.py  test_mud_api_client.py  test_mud_api_runtime.py  test_packaging_metadata.py  test_pathing.py  test_policy_authoring.py  test_runtime_mode.py  test_server.py  test_sync_apply.py  test_sync_planner.py  test_tree_model.py  test_validators.py  test_web_api.py  test_web_diagnostics_services.py  test_web_local_policy_metadata.py  test_web_policy_proxy_services.py  test_web_runtime_services.py  test_web_services.py  test_web_source_services.py
tools/: compliance_checker.py
