[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeworks-policy-workbench"
version = "0.1.24"
description = "API-first policy authoring and validation workbench for Pipe-Works"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [{name = "aapark"}]
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.4",
  "PyYAML>=6.0.0",
  "pipeworks-ipc @ git+https://github.com/pipe-works/pipeworks_ipc.git@pipeworks-ipc-v0.1.3",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.28.0",
  "black==26.1.0",
  "ruff>=0.14.0",
  "mypy>=1.19.0",
  "bandit[toml]>=1.7.10",
  "types-PyYAML>=6.0.12.20250822",
  "pre-commit>=4.0.0",
  "codespell>=2.3.0",
  "build>=1.2.2",
  "setuptools>=69",
  "wheel>=0.45",
]
docs = [
  "sphinx>=8.0,<9.0",
  "sphinx-rtd-theme>=3.0",
  "myst-parser>=4.0",
  "linkify-it-py>=2.0",
]

[project.urls]
Homepage = "https://github.com/pipe-works/pipeworks-policy-workbench"
Repository = "https://github.com/pipe-works/pipeworks-policy-workbench.git"
Issues = "https://github.com/pipe-works/pipeworks-policy-workbench/issues"
Documentation = "https://github.com/pipe-works/pipeworks-policy-workbench/tree/main/docs"

[project.scripts]
pw-policy = "policy_workbench.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*", "examples*", "*__pycache__*"]

[tool.setuptools.package-data]
policy_workbench = [
  "templates/*.html",
  "static/*.css",
  "static/*.js",
  "static/workbench/*.js",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
addopts = [
  "-q",
  "-ra",
  "--strict-markers",
  "--cov=policy_workbench",
  "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
  "unit: isolated deterministic tests",
  "integration: integration boundary tests",
  "slow: materially slower tests",
  "requires_model: tests requiring heavy model assets",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["src/policy_workbench"]
omit = [
  "*/tests/*",
  "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "docs", "_working"]
skips = ["B101"]
